--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 fotomat2/.DS_Store
 fotomat2/doc/fotomatic_spec_landing_v2.png
 fotomat2/doc/Fotomatic.pdf
+fotomat2/doc/designFotomat2.pdf
 fotomat2/resources/images/
 TeaCozy2/images/
 TeaCozy2/docs/sujet.txt
