--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@ fotomat2/doc/designFotomat2.pdf
 fotomat2/resources/images/
 TeaCozy2/images/
 TeaCozy2/docs/sujet.txt
+flexbox-business-2/favicon.ico
+flexbox-business-2/docs/apparence.xcf
+flexbox-business-2/__MACOSX/._favicon.ico
+flexbox-business-2/__MACOSX/._index.html
+flexbox-business-2/img/*.webp
+flexbox-business-2/img/*.jpg
+flexbox-business-2/docs/*.jpg
